# sperm-analysis

./: .gitignore  README.md  build_trajectories.py  config.py  evaluate.py  evaluate_matched.py  evaluation_matched.csv  evaluation_results.csv  main.py  prepare_dataset.py  pyproject.toml  test_detection.py  track.py  train.py
__MACOSX/data/processed/: ._AL280997
dataset/: dataset.yaml
dataset/labels/train/: sperm_train_0000.txt  sperm_train_0002.txt  sperm_train_0003.txt  sperm_train_0004.txt  sperm_train_0005.txt  sperm_train_0006.txt  sperm_train_0007.txt  sperm_train_0008.txt  sperm_train_0011.txt  sperm_train_0012.txt  sperm_train_0013.txt  sperm_train_0014.txt  sperm_train_0015.txt  sperm_train_0016.txt  sperm_train_0017.txt  sperm_train_0019.txt  sperm_train_0020.txt  sperm_train_0021.txt  sperm_train_0023.txt  sperm_train_0024.txt  sperm_train_0026.txt  sperm_train_0029.txt  sperm_train_0031.txt  sperm_train_0032.txt  sperm_train_0033.txt  sperm_train_0035.txt  sperm_train_0040.txt  sperm_train_0041.txt  sperm_train_0042.txt  sperm_train_0043.txt  sperm_train_0044.txt  sperm_train_0045.txt  sperm_train_0046.txt  sperm_train_0048.txt  sperm_train_0049.txt  sperm_train_0053.txt  sperm_train_0055.txt  sperm_train_0056.txt  sperm_train_0057.txt  sperm_train_0058.txt  (+436 more)
dataset/labels/val/: sperm_val_0001.txt  sperm_val_0004.txt  sperm_val_0005.txt  sperm_val_0006.txt  sperm_val_0009.txt  sperm_val_0011.txt  sperm_val_0012.txt  sperm_val_0013.txt  sperm_val_0015.txt  sperm_val_0017.txt  sperm_val_0018.txt  (+111 more)
streamlit/: app.py
trajectories/: trajectories_metrics.csv
(+274 files in other folders)
