[project]
name = "sperm-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "numpy>=2.4.5",
    "opencv-python>=4.13.0.92",
    "pandas>=3.0.3",
    "scipy>=1.17.1",
    "streamlit>=1.57.0",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
    "ultralytics>=8.4.51",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu124"
